# argmin-example

./: Cargo.toml
common/: build.rs
server/: Cargo.toml
server/src/: main.rs
worker/: Cargo.toml
worker/src/: main.rs
