[package]
name = "worker"
version = "0.1.0"
edition = "2024"
build = "../common/build.rs"

[dependencies]
argmin.workspace = true
argmin-math.workspace = true
argmin_testfunctions.workspace = true
tonic.workspace = true
tokio.workspace = true
prost.workspace = true
tonic-prost.workspace = true
[build-dependencies]
tonic-prost-build.workspace = true
